--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ streamlit-image-coordinates>=0.1.9
 streamlit-keyup>=0.2.4
 streamlit-toggle-switch>=1.0.2
 streamlit-vertical-slider>=2.5.5
+plotly==5.23.0
